# tempmail

./: .gitignore  CHANGELOG.md  README.md  demo.py  pyproject.toml  release.sh  run.sh
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
src/tempmail_cli/: __init__.py  __main__.py  cli.py  clipboard.py  config.py  exceptions.py  models.py  output.py  parser.py  poller.py  provider_manager.py  session_store.py  tui.py
src/tempmail_cli/providers/: __init__.py  base.py  guerrilla.py  mailtm.py  tempmail_lol.py
src/tempmail_cli/utils/: rate_limiter.py
tests/: conftest.py  test_cli_integration.py
tests/fixtures/: mailtm_responses.json  sample_email_with_code.html  sample_email_with_link.html
tests/providers/: test_guerrilla_provider.py  test_mailtm_provider.py
tests/unit/: test_config.py  test_output.py  test_parser.py  test_poller.py  test_provider_manager.py  test_session_store.py
