[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tempmail-cli"
version = "0.1.0"
description = "CLI tool for temporary email addresses with verification code extraction"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "typer>=0.12",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "platformdirs>=4.2",
    "pyperclip>=1.8",
    "textual>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "responses",
    "ruff",
    "mypy",
]

[project.scripts]
tempmail = "tempmail_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tempmail_cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disable_error_code = ["import-not-found", "import-untyped", "misc", "no-untyped-def"]

[tool.pytest.ini_options]
testpaths = ["tests"]
